--- a/index.html
+++ b/index.html
@@ -1,5 +1,52 @@
 <html>
-    <body>
-        Narrative Visualization
-    </body>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<style>
+    circle {
+        fill: lightblue;
+        stroke: black;
+    }
+</style>
+
+<body onload='init()'>
+    <svg width=300 height=300>
+    </svg>
+    <script>
+        async function init() {
+            data = await d3.csv('https://flunky.github.io/cars2017.csv');
+
+            // Scales
+            let domain_of_scale = [10, 150];  // Fucking Given, and I do not need to use a for loop to find data value domain
+            let x = d3.scaleLog().domain(domain_of_scale).range([0, 200]);  // So there is a log scale in addition to scaleLinear
+            let y = d3.scaleLog().domain(domain_of_scale).range([200, 0]);
+
+            // Plot (绘制) circles
+            let margin = 50;  // infer from solution DOM
+
+            d3.select('svg')
+                .append('g')
+                .attr('transform', `translate(${margin},${margin})`)
+                .selectAll('circle')
+                .data(data)
+                .enter()
+                .append('circle')
+                .attr('cx', function (d, i) { return x(Number(d.AverageCityMPG)); })
+                .attr('cy', function (d, i) { return y(Number(d.AverageHighwayMPG)); })
+                .attr('r', function (d, i) { return 2 + Number(d.EngineCylinders); });
+
+            // Plot axes
+
+            let y_axis = d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s"));
+            let x_axis = d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s"));
+            d3.select('svg')
+                .append('g')
+                .attr('transform', `translate(${margin},${margin})`)
+                .call(y_axis);
+            d3.select('svg')
+                .append('g')
+                .attr('transform', `translate(${margin},${200 + margin})`)
+                .call(x_axis);
+        }
+    </script>
+</body>
+
 </html>
